Added new parameters to swagger.yaml
