# swagger_server/controllers/convertInputToWav_post_controller.py
@@ -17,10 +17,17 @@ UPLOAD_FOLDER = './files'
 app = Flask(__name__)
 app.config['UPLOAD_FOLDER'] = UPLOAD_FOLDER
 
-def language_sloth_rest_convertInputToWav_post(file=None):  # noqa: E501
-    """language_sloth_rest_convertInputToWav_post
+def language_sloth_rest_convertInputToWav_post(file=None, input_language=None, target_language=None):  # noqa: E501
+    """language_sloth_rest_convert_input_to_wav_post
 
-    Retrieves input recording, translates it to given language and returns output recording.
+    Converts input audio to WAV and send it to TTS and STT
+
+    :param file: 
+    :type file: strstr
+    :param input_language: 
+    :type input_language: str
+    :param target_language: 
+    :type target_language: str
 
     :rtype: str
     """
@@ -33,11 +40,28 @@ def language_sloth_rest_convertInputToWav_post(file=None):  # noqa: E501
     if file.filename == '':
         return {"status": "No file selected!"}, 404
 
+    #192.168.0.227
+    stt_url = 'http://languagesloth_stt:5000/speech_to_text'
+    data = {'lang': 'de'}
+
     if file:
         with open(os.path.join(UPLOAD_FOLDER, "recording.wav"), "wb") as fp:
             fp.write(file.read())
         
+        with open(os.path.join(UPLOAD_FOLDER, "recording.wav"), "rb") as f:
+            r = requests.post(stt_url, files={'file': f}, data=data)
+            print(r.text)
+            return r.text
+        
+            
+        
         # TODO Send WAV to CoquiSST
+
+        
+
+
+
+
         # TODO Send received text to LibreTranslate
         # TODO Send translated text to CoquiTTS
         # TODO Return output audio to frontend
